platform/minio/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-s3
  namespace: minio
spec:
  ingressClassName: kong
  rules:
    - host: s3.algovn.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port: { number: 9000 }
  tls:
    - hosts: [s3.algovn.com]
